[gd_scene load_steps=7 format=3 uid="uid://bwguqnhtogkq0"]

[ext_resource type="Script" path="res://Scripts/Player/player_2.gd" id="1_0wfli"]
[ext_resource type="Texture2D" uid="uid://b3sar5e6tg3a7" path="res://Asset/cursor1.png" id="2_q7w4o"]
[ext_resource type="Texture2D" uid="uid://c0ibpp21lbobf" path="res://Asset/People/bald_man-no-bg.png" id="2_xpkvv"]
[ext_resource type="Texture2D" uid="uid://4ofqsi00q2k0" path="res://Asset/People/bald_man.png" id="3_mfntb"]
[ext_resource type="FontFile" uid="uid://qa4nvvmd0bqq" path="res://Asset/Fonts/Oswald-Medium.ttf" id="3_rbp5k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrgtq"]
size = Vector2(87, 95)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_0wfli")
hover_cursor = ExtResource("2_q7w4o")

[node name="ArmyMan-no-bg" type="Sprite2D" parent="."]
scale = Vector2(0.181009, 0.256757)
texture = ExtResource("2_xpkvv")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(58.5, 47.5)
shape = SubResource("RectangleShape2D_mrgtq")

[node name="ConversationUI" type="CanvasLayer" parent="."]
visible = false

[node name="Conversation" type="Control" parent="ConversationUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 203.0
offset_top = 151.0
offset_right = -307.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layer1" type="Control" parent="ConversationUI/Conversation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.901961, 0.72549, 1)

[node name="ArmyMan" type="Sprite2D" parent="ConversationUI/Conversation/Layer1"]
position = Vector2(117, 201.5)
scale = Vector2(0.103516, 0.296329)
texture = ExtResource("3_mfntb")

[node name="Bar" type="ColorRect" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 0
offset_right = 642.0
offset_bottom = 22.0
color = Color(0.639216, 0.784314, 0.956863, 1)

[node name="Label" type="Label" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.5
offset_top = -6.0
offset_right = 50.5
offset_bottom = 24.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rbp5k")
theme_override_font_sizes/font_size = 20
text = "Conversation"

[node name="Conversation1" type="Control" parent="ConversationUI/Conversation"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Conversation" type="Label" parent="ConversationUI/Conversation/Conversation1"]
layout_mode = 0
offset_left = 237.0
offset_top = 51.0
offset_right = 636.0
offset_bottom = 81.0
scale = Vector2(0.96, 1.08)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rbp5k")
theme_override_font_sizes/font_size = 20
text = "Hello, Friend. Are you also preparing to set out the
trial for the new land"

[node name="Advice" type="Button" parent="ConversationUI/Conversation/Conversation1"]
modulate = Color(0.968627, 0.901961, 0.72549, 1)
layout_mode = 0
offset_left = 280.0
offset_top = 212.0
offset_right = 480.0
offset_bottom = 243.0
scale = Vector2(1.5, 1.3)
text = "Do you have any advice?"

[node name="Yes" type="Button" parent="ConversationUI/Conversation/Conversation1"]
modulate = Color(0.968627, 0.901961, 0.72549, 1)
layout_mode = 0
offset_left = 280.0
offset_top = 151.0
offset_right = 480.0
offset_bottom = 182.0
scale = Vector2(1.5, 1.3)
text = "Yes i am"

[node name="Quit" type="Button" parent="ConversationUI/Conversation/Conversation1"]
modulate = Color(0.968627, 0.901961, 0.72549, 1)
layout_mode = 0
offset_left = 280.0
offset_top = 276.0
offset_right = 480.0
offset_bottom = 307.0
scale = Vector2(1.5, 1.3)
text = "So Long"

[node name="Conversation2" type="Control" parent="ConversationUI/Conversation"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Conversation" type="Label" parent="ConversationUI/Conversation/Conversation2"]
layout_mode = 0
offset_left = 237.0
offset_top = 51.0
offset_right = 636.0
offset_bottom = 81.0
scale = Vector2(0.96, 1.08)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rbp5k")
theme_override_font_sizes/font_size = 20
text = "Find Yourself a good wagon train. That's the prime 
thing. Keep moving and dont take no cutoffs. Stick
to the main trail and you'll be OK."

[node name="Pardon" type="Button" parent="ConversationUI/Conversation/Conversation2"]
modulate = Color(0.968627, 0.901961, 0.72549, 1)
layout_mode = 0
offset_left = 280.0
offset_top = 212.0
offset_right = 480.0
offset_bottom = 243.0
scale = Vector2(1.5, 1.3)
text = "Pardon?"

[node name="Quit" type="Button" parent="ConversationUI/Conversation/Conversation2"]
modulate = Color(0.968627, 0.901961, 0.72549, 1)
layout_mode = 0
offset_left = 280.0
offset_top = 276.0
offset_right = 480.0
offset_bottom = 307.0
scale = Vector2(1.5, 1.3)
text = "So Long"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ConversationUI/Conversation/Conversation1/Advice" to="." method="_on_advice_pressed"]
[connection signal="pressed" from="ConversationUI/Conversation/Conversation1/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ConversationUI/Conversation/Conversation2/Quit" to="." method="_on_quit_pressed"]
